[gd_scene load_steps=20 format=2]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://sprites/Base/fundo preto.png" type="Texture" id=2]
[ext_resource path="res://sprites/Base/Logo sem creditos.png" type="Texture" id=3]
[ext_resource path="res://sprites/Base/Creditos.png" type="Texture" id=4]
[ext_resource path="res://sprites/Base/button_menu.png" type="Texture" id=5]
[ext_resource path="res://sprites/Base/button_menu_pressed.png" type="Texture" id=6]
[ext_resource path="res://songs/Sodium-Vapor_Looping_v001.ogg" type="AudioStream" id=7]
[ext_resource path="res://sprites/Base/box_normal_unlocked.png" type="Texture" id=8]
[ext_resource path="res://sprites/Botao_resposta/box_resposta.png" type="Texture" id=9]
[ext_resource path="res://fonts/golden_dragon/golden-dragon-solid.ttf" type="DynamicFontData" id=10]

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 308, 210 ), Vector2( 308, 180 ) ]
}

[sub_resource type="DynamicFontData" id=2]
font_path = "res://fonts/golden_dragon/golden-dragon-solid.ttf"

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = SubResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "exit"
tracks/0/type = "value"
tracks/0/path = NodePath("botoes:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fundo/logo:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("fundo/Sprite2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("fundo/logo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fundo/Sprite2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("botoes:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("botoes:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="DynamicFontData" id=7]
font_path = "res://fonts/golden_dragon/golden-dragon-solid.ttf"

[sub_resource type="DynamicFont" id=8]
size = 35
font_data = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 55
font_data = ExtResource( 10 )

[node name="menu" type="Node2D"]
script = ExtResource( 1 )

[node name="fundo" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="fundo"]
position = Vector2( 301.943, 517.199 )
scale = Vector2( 1.11688, 1.05136 )
texture = ExtResource( 2 )

[node name="logo" type="Node2D" parent="fundo"]
pause_mode = 2
editor/display_folded = true

[node name="Sprite" type="Sprite" parent="fundo/logo"]
position = Vector2( 308, 182.751 )
scale = Vector2( 1.24763, 1.24763 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="fundo/logo"]
autoplay = "default"
anims/default = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="fundo"]
position = Vector2( 288.249, 989.346 )
texture = ExtResource( 4 )

[node name="botoes" type="Node2D" parent="."]
position = Vector2( 0, -20 )

[node name="continuar" type="Node2D" parent="botoes"]

[node name="continuar_botao" type="TouchScreenButton" parent="botoes/continuar"]
position = Vector2( 76, 400 )
normal = ExtResource( 5 )
pressed = ExtResource( 6 )

[node name="Label" type="Label" parent="botoes/continuar"]
margin_left = 139.933
margin_top = 412.959
margin_right = 470.933
margin_bottom = 486.959
custom_fonts/font = SubResource( 3 )
text = "CONTINUAR"

[node name="novo_jogo" type="Node2D" parent="botoes"]
position = Vector2( 0, 115 )

[node name="novo_jogo_botao" type="TouchScreenButton" parent="botoes/novo_jogo"]
position = Vector2( 76, 400 )
normal = ExtResource( 5 )
pressed = ExtResource( 6 )

[node name="Label" type="Label" parent="botoes/novo_jogo"]
margin_left = 139.933
margin_top = 412.959
margin_right = 470.933
margin_bottom = 486.959
custom_fonts/font = SubResource( 3 )
text = "NOVO JOGO"
align = 1

[node name="finais" type="Node2D" parent="botoes"]
position = Vector2( 0, 230 )

[node name="finais_botao" type="TouchScreenButton" parent="botoes/finais"]
position = Vector2( 76, 400 )
normal = ExtResource( 5 )
pressed = ExtResource( 6 )

[node name="Label" type="Label" parent="botoes/finais"]
margin_left = 139.933
margin_top = 412.959
margin_right = 470.933
margin_bottom = 486.959
custom_fonts/font = SubResource( 3 )
text = "FINAIS"
align = 1

[node name="sobre" type="Node2D" parent="botoes"]
position = Vector2( 0, 345 )

[node name="sobre_botao" type="TouchScreenButton" parent="botoes/sobre"]
position = Vector2( 76, 400 )
normal = ExtResource( 5 )
pressed = ExtResource( 6 )

[node name="Label" type="Label" parent="botoes/sobre"]
margin_left = 139.933
margin_top = 412.959
margin_right = 470.933
margin_bottom = 486.959
custom_fonts/font = SubResource( 3 )
text = "SOBRE"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
autoplay = "intro"
anims/default = SubResource( 4 )
anims/exit = SubResource( 5 )
anims/intro = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
pause_mode = 2
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 7 )
volume_db = -8.0
autoplay = true

[node name="box_novo_jogo" type="Node2D" parent="."]
pause_mode = 2
editor/display_folded = true

[node name="box_sprite" type="Sprite" parent="box_novo_jogo"]
position = Vector2( 304.387, 598.422 )
scale = Vector2( 5, 5 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="box_novo_jogo"]
margin_left = 135.0
margin_top = 426.344
margin_right = 472.0
margin_bottom = 561.344
custom_fonts/font = SubResource( 8 )
text = "Tem certeza que deseja voltar para a semana 1 ?"
align = 1
valign = 1
autowrap = true

[node name="button_sim" type="TouchScreenButton" parent="box_novo_jogo"]
position = Vector2( 185.699, 611.895 )
scale = Vector2( 0.550259, 0.707563 )
normal = ExtResource( 9 )
pressed = ExtResource( 9 )

[node name="button_nao" type="TouchScreenButton" parent="box_novo_jogo"]
position = Vector2( 185.699, 691.046 )
scale = Vector2( 0.550259, 0.707563 )
normal = ExtResource( 9 )
pressed = ExtResource( 9 )

[node name="label_sim" type="Label" parent="box_novo_jogo"]
margin_left = 248.183
margin_top = 610.442
margin_right = 364.183
margin_bottom = 684.442
custom_fonts/font = SubResource( 9 )
text = "SIM"

[node name="label_nao" type="Label" parent="box_novo_jogo"]
margin_left = 248.276
margin_top = 693.269
margin_right = 364.276
margin_bottom = 767.269
custom_fonts/font = SubResource( 9 )
text = "N√ÉO"
[connection signal="released" from="botoes/continuar/continuar_botao" to="." method="_on_continuar_botao_released"]
[connection signal="released" from="botoes/novo_jogo/novo_jogo_botao" to="." method="_on_novo_jogo_botao_released"]
[connection signal="released" from="botoes/finais/finais_botao" to="." method="_on_finais_botao_released"]
[connection signal="released" from="botoes/sobre/sobre_botao" to="." method="_on_sobre_botao_released"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="box_novo_jogo/button_sim" to="." method="_on_button_sim_pressed"]
[connection signal="released" from="box_novo_jogo/button_nao" to="." method="_on_button_nao_released"]
